--- a/text/citace.bib
+++ b/text/citace.bib
@@ -493,4 +493,11 @@ keywords = "TLD"
     date={2014-09-04},
     urldate={2017-06-24},
 }
+@online{SRIM,
+    author={James F. Ziegler},
+    title={SRIM - The Stopping and Range of Ions in Matter},
+    url={http://www.srim.org/},
+    date={},
+    urldate={2017-06-25},
+}
 %pozn.: clanky rozradit do kapitol (aby by to bylo prehlednejsi)
