--- a/text/parts/preamble.tex
+++ b/text/parts/preamble.tex
@@ -82,3 +82,4 @@ urlcolor=blue, citecolor=blue, pdfauthor=MichalSestak, pdftitle=DoseDistribution
 %definovani maker \mathit{}
 \newcommand{\RR}{\mathit{RR}}
 \newcommand{\LET}{\mathit{LET}}
+\newcommand{\unit}{keV/$\mu$m$\ $}
