--- a/text/main.tex
+++ b/text/main.tex
@@ -1,13 +1,14 @@
 \RequirePackage[l2tabu, orthodox]{nag}
 \documentclass[a4paper,12pt,oneside]{report}
 \input{parts/preamble}
-%\includeonly{parts/titlepage, parts/uvod}
+%\includeonly{parts/experimentDosis,parts/praktickaCast}
 %\includeonly{parts/experimentDosis}%, parts/praktickaCast}
 %\includeonly{parts/experimentDosis, parts/detektory}%, parts/praktickaCast}
 %\includeonly{parts/praktickaCast}
 %\includeonly{parts/detektory, parts/experimentDosis}
-%\includeonly{parts/detektory,parts/praktickaCast}
+%\includeonly{parts/detektory,parts/praktickaCast, parts/experimentDosis}
 %\includeonly{parts/detektory}
+\includeonly{parts/kosmickeZareni, parts/titlepage, parts/detektory, parts/experimentDosis, parts/praktickaCast}
 \begin{document}
 \pagestyle{empty}
 
