--- a/text/parts/experimentDosis.tex
+++ b/text/parts/experimentDosis.tex
@@ -102,7 +102,7 @@ Z informací v oddílu \ref{sec:kosmickeZareni_solar} plyne, že za slunečního
 	\caption{}
 	\label{subfig:dosis_solarCycle}
   \end{subfigure}
-  \caption{V (a) je časový vývoj nadmořské výšky ISS: červeně je vyznačen vývoj v rámci DOSIS, modře v rámci DOSIS3D; černě je označen vývoj nadmořské výšky v době, kdy neprobíhal žádný z experimentů. V (b) je naměřená četnost Oulu neutronovým monitorem, značení je stejné jako v (a); klesající vývoj četnosti impulzů značí rostoucí sluneční aktivitu. \cite{dosis,dosis_oulu}} 
+  \caption{V (a) je časový vývoj nadmořské výšky ISS: červeně je vyznačen vývoj v rámci DOSIS, modře v rámci DOSIS3D; černě je označen vývoj nadmořské výšky v době, kdy neprobíhal žádný z experimentů. V (b) je naměřená četnost Oulu neutronovým monitorem, značení je stejné jako v (a); klesající vývoj četnosti impulzů značí rostoucí sluneční aktivitu. \cite{dosis}} 
   \label{fig:dosis_parameters}
 \end{figure}
 
