--- a/text/parts/titlepage.tex
+++ b/text/parts/titlepage.tex
@@ -4,7 +4,8 @@
 {\large FAKULTA JADERNÁ A FYZIKÁLNĚ INŽENÝRSKÁ\\}
 {\large KATEDRA DOZIMETRIE A APLIKACE IONIZUJÍCÍHO ZÁŘENÍ\\}
 	\vspace{40pt}
-	\includegraphics[scale=0.7]{cvut.png}
+    \includegraphics[width=0.25\textwidth]{cvut.jpg}
+    %\includegraphics[scale=0.7]{cvut.png}
 
 	\vspace{40pt}
 {\Huge \textbf{BAKALÁŘSKÁ PRÁCE\\}}
@@ -47,7 +48,7 @@ Děkuji Ing. Ivě Ambrožové, Ph.D. za vedení mé bakalářské práce, za cen
 \begin{tabularx}{\textwidth}{>{\itshape}l X}
   Title: & \textbf{Dose distribution inside the International Space Station}\\
   Author: & Michal Šesták\\
-  Abstract: & Cosmic rays represents a huge health risk. Passive detectors are widely used for the measurement, especially thermoluminescent detectors and solid state nuclear track detectors. There were and are many experiments concerning about the determination of radiation environment within the International Space Station. Experiments DOSIS (2009--2011) and DOSIS3D (2012--so far) are two of them. The measured data can provide informations about influence of several parameters (for instance solar activity, altitude) to the dose rate. This thesis includes informations about characterictics of the cosmic rays in low Earth orbit, about passive detectors used in space measurements, about experiments DOSIS and DOSIS3D. There is also involved the evaluation of three track etched detectors at the end of the work.\\
+  Abstract: & Cosmic rays represents a huge health risk. Passive detectors are widely used for the measurement, especially thermoluminescent detectors and solid state nuclear track detectors. There were and are many experiments dealing with the determination of radiation environment within the International Space Station. Experiments DOSIS (2009--2011) and DOSIS3D (2012--so far) are two of them. The measured data can provide informations about influence of several parameters (for instance solar activity, altitude) to the dose rate. This thesis includes informations about characterictics of the cosmic rays in low Earth orbit, about passive detectors used in space measurements, about experiments DOSIS and DOSIS3D. There is also involved the evaluation of three track etched detectors at the end of the work.\\
   Key words: & cosmic rays in low Earth orbit, solid state nuclear track detectors, ISS, Columbus module, DOSIS, DOSIS3D
 \end{tabularx}
 \newpage 
