--- a/text/parts/ISS.tex
+++ b/text/parts/ISS.tex
@@ -8,7 +8,7 @@
 %\begin{document}
 %\section{ISS}
 \chapter{Mezinárodní kosmická stanice}
-Mezinárodní kosmická stanice (ISS, International Space Station) je družice lidského původu nacházející se v blízkém okolí Země. Obíhá Zemi na orbitě se sklonem dráhy 51$^{\circ}$ \cite{ISS_wiki} v nadmořské výšce oscilující kolem 400 km rychlostí 28 800 km/h, což znamená, že celou Zem obletí každých 90 min \cite{ISS_where}. Konstrukce stanice započala v roce 1998, od listopadu 2000 je permanentně obývána lidmi. Od roku 2009 je posádka šestičlenná, přičemž po šesti měsících se obměňují zpravidla dva její členové \cite{ISS_wiki}. Při konstrukci stanice byly značně využívány americké raketoplány Space Shuttle, které se po dokončení stanice v roce 2011 přestaly používat. V současnosti je zásobování stanice obstaráváno ruskými kosmickými loděmi Soyuz.
+Mezinárodní kosmická stanice (ISS, International Space Station) je umělá družice Země. Obíhá Zemi na orbitě se sklonem dráhy 51$^{\circ}$~\cite{ISS_wiki} v nadmořské výšce oscilující kolem 400 km rychlostí 28 800 km/h, což znamená, že celou Zem obletí každých 90 min~\cite{ISS_where}. Konstrukce stanice započala v roce 1998, od listopadu 2000 je permanentně obývána lidmi. Od roku 2009 je posádka šestičlenná, přičemž po šesti měsících se obměňují zpravidla dva její členové~\cite{ISS_wiki}. Při konstrukci stanice byly značně využívány americké raketoplány Space Shuttle, které se po dokončení stanice v roce 2011 přestaly používat. V současnosti je zásobování stanice obstaráváno ruskými kosmickými loděmi Soyuz.
 \begin{figure}[H]
   \centering
   \includegraphics[width=\textwidth]{ISS_celek.jpg}
@@ -42,7 +42,7 @@ ISS bude provozována minimálně do roku 2024~\cite{ISS_prodlouzeni} a celkové
 \section{Modul Columbus}\label{sec:ISS_columbus}
 Modul Columbus je největším příspěvkem ESA k ISS.
 
-Jedná se o laboratorní modul zaměřený na výzkum v biologii, materiálových vědách, fyziku tekutin a další výzkumy v mikrogravitaci. Obsahuje deset skříňových modulů pro experimenty (International Standard Payload Racks), každý z nich poskytuje nezávislé ovládání energie, chlazení a také komunikaci s pozemními dispečery a vědci. Navíc na vnější straně laboratoře jsou čtyři plošiny, na které jdou umístit vědecké přístroje. Modul je 7 m dlouhý, jeho průměr činí 4,5 m a váží 10 300 kg (vše jsou přibližné hodnoty). \cite{columbus}.
+Jedná se o laboratorní modul zaměřený na výzkum v biologii, materiálových vědách, fyziku tekutin a další výzkumy v mikrogravitaci. Obsahuje deset skříňových modulů pro experimenty (International Standard Payload Racks), každý z nich poskytuje nezávislé ovládání energie, chlazení a také komunikaci s pozemními dispečery a vědci. Navíc na vnější straně laboratoře jsou čtyři plošiny, na které jdou umístit vědecké přístroje. Modul je 7 m dlouhý, jeho průměr činí 4,5 m a váží 10 300 kg (vše jsou přibližné hodnoty).~\cite{columbus}.
 
 Právě v tomto modulu probíhal experiment DOSIS a v současnosti běží experiment DOSIS3D. 
 \begin{figure}[H]
