--- a/text/parts/detektory.tex
+++ b/text/parts/detektory.tex
@@ -34,12 +34,12 @@ TED jsou schopné měřit pouze částice s $\LET$ vyšším než je určitá pr
 
 Latentní stopy jsou nejčastěji zvětšovány chemickým leptáním. Tato metoda vychází z faktu, že poškozené části materiálu se leptají rychleji než nepoškozené. Někdy se používá dvoustupňové (per partes) leptání, které má tu výhodu, že po první fázi jsou zřetelné stopy vytvořené částicemi s krátkým dosahem a s velkým $\LET$ ($> 300$ keV/$\mu$m), které by při jednostupňovém dlouhém leptání byly odstraněny, a po druhé fázi naopak lze identifikovat stopy vytvořené částicemi s malým $\LET$ (až do detekčního prahu), čímž se významně zvýší rozsah detekovatelných částic \cite{cesky}. 
 
-Tvorba latentních stop není doposud plně pochopena. U anorganických materiálů se jej snaží vysvětlit např. mechanismus popsaný v \cite{spikeModel}. U organických materiálů je proces tvorby stop rozdělen do tří fází: fáze fyzikální, fáze fyzikální-chemická a fáze chemická. Při první fázi ztrácí částice v materiálu energii (excitacemi a ionizacemi elektronů z obalu terčíků, vyražením terčíku z polymerové vazby, brzdným záření v případě velké rychlosti částice). Při druhé fázi dochází k interakcím částic vzniklých v první fázi, které vyúsťují ke vzniku latentních stop; latentní stopa se skládá z jádra o průměru cca 10 nm a vnější oblasti o průměru odpovídající dosahu delta elektronů, viz obr. \ref{fig:detektory_latentTrack}. Poslední fáze představuje leptání, při němž jsou stopy zafixovány
+Tvorba latentních stop není doposud plně pochopena. U anorganických materiálů se jej snaží vysvětlit např. mechanismus popsaný v \cite{spikeModel}. U organických materiálů je proces tvorby stop rozdělen do tří fází: fáze fyzikální, fáze fyzikální-chemická a fáze chemická. Při první fázi ztrácí částice v materiálu energii (excitacemi a ionizacemi elektronů z obalu terčíků, vyražením terčíku z polymerové vazby, brzdným záření v případě velké rychlosti částice). Při druhé fázi dochází k interakcím částic vzniklých v první fázi, které vyúsťují ke vzniku latentních stop; latentní stopa se skládá z jádra o průměru cca 10 nm a vnější oblasti o poloměru odpovídající dosahu delta elektronů, viz obr. \ref{fig:detektory_latentTrack}. Poslední fáze představuje leptání, při němž jsou stopy zafixovány
 a zvětšeny.~\cite{thesisKPBrabcova} 
 \begin{figure}[h]
   \centering
   \includegraphics[width=0.38\textwidth]{detektory_latentTrack.png}
-  \caption{Latentní stopa v organickém materiálu se skládá z jádra (CORE) a z obalu (HALO). \cite{thesisKPBrabcova}}
+  \caption{Latentní stopa v organickém materiálu se skládá z jádra (CORE) a vnější oblasti (HALO). \cite{thesisKPBrabcova}}
   \label{fig:detektory_latentTrack}
 \end{figure}
 
