--- a/text/parts/experimentDosis.tex
+++ b/text/parts/experimentDosis.tex
@@ -1,5 +1,5 @@
 \chapter{Experimenty DOSIS a DOSIS 3D}
-Informace v této kapitole byly čerpány převážně ze zdrojů \cite{dosis,dosis2}.
+Informace v této kapitole byly čerpány převážně ze zdroje \cite{dosis}.
 
 Experiment DOSIS (Dose Distribution Inside the ISS, distribuce dávky uvnitř ISS) probíhal v letech 2009-2011, experiment DOSIS3D probíhá od roku 2012. Jejich cílem je stanovení prostorové distribuce dávky v modulu ISS Columbus a získání dat, která by vedla k vytvoření 3D modelu rozložení dávek/dávkového ekvivalentu.
 %a DOSIS 3D probíhají roku 2009 za účelem vyšetření prostorové distribuce dávky v modulu ISS Columbus. Kýženým cílem bylo získání dat, která by vedla k vytvoření 3D modelu této distribuce.
@@ -52,7 +52,7 @@ první sada pasivních detektorů spolu s aktivními detektory \mbox{DOSTEL-1,2}
 \begin{table}[ht]
   \centering
 \footnotesize
-  \caption{Časový vývoj používaných sad pasivních detektorů. Tabulka dále obsahuje dobu, kterou daná sada strávila na misi (tj. od startu do návratu na Zem), v závorce je doba, po kterou pasivní detektory byly umístěny v dané pozici/místě; pokrytí je podíl těchto dvou dob. Poslední sloupec obsahuje rozmezí nadmořské výšky, ve které se ISS v daný časový úsek nacházela~\cite{dosis}. U sad 7,8,9 nejsou dosud k dispozici informace o nadmořské výšce. Na ISS se nyní nachází 10. sada experimentu DOSIS3D.}
+  \caption{Časový vývoj používaných sad pasivních detektorů. Tabulka dále obsahuje dobu, kterou daná sada strávila na misi (tj. od startu do návratu na Zem), v závorce je doba, po kterou pasivní detektory byly umístěny v dané pozici/místě; pokrytí je podíl těchto dvou dob. Poslední sloupec obsahuje rozmezí nadmořské výšky, ve které se ISS v daný časový úsek nacházela~\cite{dosis}. U sad 7,8,9 nejsou dosud k dispozici informace o nadmořské výšce. Na ISS se nyní (květen 2017) nachází 10. sada experimentu DOSIS3D.}
   \label{tab:dosis_timeline_passive}
   \begin{tabularx}{\textwidth}{llllll}
 	\toprule
@@ -144,14 +144,14 @@ NPI			 &Al$_2$O$_3$:C&Al$_2$O$_3$:C\\
 
 NPI používá dva TL detektory, Al$_2$O$_3$:C a CaSO$_4$:Dy. Oba dva jsou vyhodnocovány pomocí čtecího systému RA’94 (THORN EMI 9789 QB)+TOLEDO 654 TLD Reader; rychlost zahřívání u obou je rovna 10 $^{\circ}$C/s; první není předehříván, druhý je předehříván na 150 $^{\circ}$C (22 s); annealing probíhá 20 minut za 700 $^{\circ}$C (Al$_2$O$_3$:C), respektive 10 minut za 380 $^{\circ}$C (CaSO$_4$:Dy); ochlazovací rychlost je vysoká u obou; kalibrování probíhá u obou pomocí $^{137}$Cs; u obou je vyhodnocována plocha pod vyhřívací křivkou. Oba dva mají průměr roven 5 mm a tloušťku rovnou 1 mm.
 \subsection{Opticky stimulované luminiscenční detektory}
-Detektory založené na opticky stimulované luminiscenci využívají následující instituce: OSU, SCK$\cdot$CEN, NASA/SRAG, NIRS. Jsou vyrobené z jednoho materiálu (Al$_2$O$_3$:C), avšak liší se v následujících parametrech: čtecí systém, příkon energie stimulujícího laseru působící na centimetr čtvereční detektoru, filtr, doba stimulace, kalibrační metoda a kalibrační zdroj, vyhodnocení OSL křivky. Všechny tyto parametry jsou pro detektory od jednotlivých institucí v tab. 6 v \cite{dosis}. 
+Detektory založené na opticky stimulované luminiscenci využívají následující instituce: OSU, SCK$\cdot$CEN, NASA/SRAG, NIRS. Jsou vyrobené z jednoho materiálu (Al$_2$O$_3$:C), avšak liší se v následujících parametrech: čtecí systém, příkon energie stimulujícího laseru působící na centimetr čtvereční detektoru, filtr, doba stimulace, kalibrační metoda a kalibrační zdroj, vyhodnocení OSL křivky. Všechny tyto parametry lze pro používané OSL detektory dohledat v~\cite{dosis}. 
 %nedělat tabulku, vypsat instituce normálně; ze je to jeden materiál (Al$_2$O$_3$:C), ale různé parametry; jejich vyhodnocování probíhá pomocí referenčního zdroje (ten vztah asi nepsat); to je asi vše, bude to krátké
 \subsection{Detektory stop v pevné fázi}
-Všechny používané detektory stop v pevné fázi jsou CR-39. V tab. \ref{tab:dosis_pouzivaneTED} jsou uvedeny instituce, které TED využívají; tabulka také obsahuje výrobce daného TED. Avšak tato tabulka již není aktuální, jelikož většina institucí přešla v posledních letech na TASTRAK původně využívaný pouze MTA EK. Různorodost využívaných TED a jejich způsobů vyhodnocení totiž komplikovalo vzájemné porovnávání a interpretaci naměřených dat \cite{cesky}. Důležitými parametry jsou: doba leptání; teplota, při níž leptání probíhá; koncentrace NaOH, jímž se leptalo; odleptaná vrstva; analyzovaná plocha.
+Všechny používané detektory stop v pevné fázi jsou CR-39. V tab.~\ref{tab:dosis_pouzivaneTED} jsou uvedeny instituce, které TED využívají; tabulka také obsahuje výrobce daného TED. Avšak tato tabulka již není aktuální, jelikož většina institucí přešla v posledních letech na TASTRAK původně využívaný pouze MTA EK. Různorodost využívaných TED a jejich způsobů vyhodnocení totiž komplikovalo vzájemné porovnávání a interpretaci naměřených dat~\cite{cesky}. Důležitými parametry jsou: doba leptání; teplota, při níž leptání probíhá; koncentrace NaOH, jímž se leptalo; odleptaná vrstva; analyzovaná plocha.
 \begin{table}[h]
   \def\arraystretch{0.8}
   \centering
-  \caption{Přehled institucí používající TED, u každé instituce jsou uvedeny výrobci příslušného detektoru. V posledních letech většina institucí přešla k používání TASTRAKu. \cite{dosis}}
+  \caption{Přehled institucí používající TED, u každé instituce jsou uvedeny výrobci příslušného detektoru. V posledních letech většina institucí přešla k používání TASTRAKu.~\cite{dosis}}
   \label{tab:dosis_pouzivaneTED}
   \begin{tabular}{ll}
 	\toprule
@@ -168,7 +168,7 @@ Všechny používané detektory stop v pevné fázi jsou CR-39. V tab. \ref{tab:
   \end{tabular}
 \end{table}
 
-Metodika vyhodnocování TED používaných NPI je v oddíle \ref{sec:praktickaCast_metodika}.
+Metodika vyhodnocování TED používaných NPI je v oddíle~\ref{sec:praktickaCast_metodika}.
 
 %dát sem tu tabulku celou; CR-39; velmi záleží na hardwaru (mikroskop, kamera) a softwaru!!!
 %pozn.: principy, z čeho co je a proste vše podrobnější si nechat do další kapitoly
@@ -177,7 +177,7 @@ Detektorová jednotka DOSTEL se skládá z dvou křemíkových planárních dete
 
 V modulu Columbus jsou nainstalovány dvě jednotky DOSTEL v navzájem kolmém směru, což umožňuje získat informace o směrovosti pole záření v modulu. Navíc díky dlouhodobosti měření DOSTEL detektory je možné studovat změny v ozáření během jedenáctiletého slunečního cyklu.
 
-Na obrázku \ref{fig:dosis_activeDetectors} je mimo jiné vidět DOSTEL. Informace v tomto oddíle byly brány z \cite{dosis,activeDetectors}. 
+Na obrázku \ref{fig:dosis_activeDetectors} je mimo jiné vidět umístění DOSTELu. Informace v tomto oddíle byly brány z \cite{dosis,activeDetectors}. 
 \begin{figure}[H]
   \centering
   \includegraphics[width=0.8\textwidth]{dosis_activeDetectors.jpg}
