--- a/text/parts/kosmickeZareni.tex
+++ b/text/parts/kosmickeZareni.tex
@@ -11,7 +11,7 @@ složka albedo neutrony a protony. To jsou sekundární částice vzniklé při 
   \label{fig:zdroje}
 \end{figure}
 
-V dalším textu nejprve stručně rozebereme jednotlivé zdroje kosmického záření v blízkém okolí Země, poté se podíváme, jaké faktory ho ovlivňují.
+V dalším textu nejprve stručně rozebereme jednotlivé zdroje kosmického záření v blízkém okolí Země, poté se podíváme, jaké faktory ovlivňují pole kosmického záření v blízkosti Země.
 \section{Zdroje kosmického záření v blízkém okolí Země}
 \subsection{Galaktické kosmické záření}
 Galaktické kosmické záření se skládá z 98 \% z protonů a těžších iontů (baryonová složka), z 2 \% z elektronů a pozitronů (leptonová složka). V baryonové složce převládají protony (87\%) a alfa částice (12\%), zbytek tvoří ionty s protonovým číslem od 3 (Li) do 92 (U) \cite{benton}. Důležitou roli ve vesmírné dozimetrii hrají částice s vysokým atomovým číslem a velkou energií, protože jsou relativně hojné a mají velikou pronikavost.
