--- a/text/parts/praktickaCast.tex
+++ b/text/parts/praktickaCast.tex
@@ -222,6 +222,8 @@ Spektra pro dávku a dávkový příkon názorně ukazují rozdíl mezi těmito 
   \end{tabular}
 \end{table}
 
-Dávkové příkony určené z vyhodnocených TED (tab.~\ref{tab:praktickaCast_davkyVysledky}) jsou mnohem menší než dávkové příkony určené z TLD (viz. oddíl \ref{sec:dosis_vysledky}; lze předpokládat, že $\dot{D}$ z osmé sady budou vycházet alespoň řádově jako $\dot{D}$ v předchozích sadách). Je to tím, že převážná část absorbované dávky pochází od částic s $\LET$ menším než je detekční práh TASTRAKu. Tento rozdíl dávkových příkonů od TLD a TED byl naměřen i v jiných experimentech, např.~\cite{passDetectors,ambrozova_dvaExperimenty, japonsky}.
+Dávkové příkony určené z vyhodnocených TED (tab.~\ref{tab:praktickaCast_davkyVysledky}) jsou mnohem menší než dávkové příkony určené z TLD (viz. oddíl \ref{sec:dosis_vysledky}; lze předpokládat, že $\dot{D}$ z osmé sady budou vycházet alespoň řádově jako $\dot{D}$ v předchozích sadách). Je to tím, že převážná část absorbované dávky pochází od částic s $\LET$ menším než je detekční práh TASTRAKu. Podobné rozdíly mezi dávkovými příkony od TLD a TED byly naměřeny i v jiných experimentech, např.~\cite{passDetectors,ambrozova_dvaExperimenty, japonsky}.
+
+Velikost dávkového příkonu vyhodnoceného detektoru z PDP3 je menší než velikost dávkových příkonů z vyhodnocených detektorů z PDP1,2. Tento rozdíl lze pozorovat i u dávkových příkonů z luminiscenčních detektorů (obr.~\ref{fig:dosis_vysl_jednaSada}). Vyšší dávkový příkon z PDP1 než z PDP2 v případě vyhodnocených detektorů je dán vyšším počtem analyzovaných stop prvního detektoru (viz dva odstavce výše).
 
 Vyhodnocování bude pokračovat druhým leptáním, při kterém se zobrazí částice s menším $\LET$ delším dosahem. Bude leptána stejná plocha a díky referenčním bodům (obr.~\ref{fig:praktickaCast_stopyPoskozeni}) bude možné rozlišit jednotlivé stopy od sekundárních a primárních částic. Stopy od sekundárních částic, které byly zřetelné po prvním leptání, budou nyní odleptány, případně přeleptány, a naopak se zobrazí předtím neviděné stopy od primárních částic, které mají dlouhý dosah. Vypočtou se dávky a dávkové ekvivalenty nových stop a poté se připočtou k $D$ a $H$ určené už při prvním leptání. Nakonec se kombinací dat z TLD a TED postupem popsaným v oddíle~\ref{sec:detektory_kombinace} určí celkové dávkové příkony a dávkové ekvivalenty.
