--- a/text/parts/preamble.tex
+++ b/text/parts/preamble.tex
@@ -75,6 +75,8 @@ urlcolor=blue, citecolor=blue, pdfauthor=MichalSestak, pdftitle=DoseDistribution
 
 \usepackage{appendix}
 
+\usepackage{pdfpages}
+
 %\usepackage{soulpos}
 %\usepackage{lmodern}
 %\usepackage[author={Michal Šesták}]{pdfcomment}
