--- a/text/parts/titlepage.tex
+++ b/text/parts/titlepage.tex
@@ -21,6 +21,8 @@ Vedoucí práce: & Ing. Iva Ambrožová, Ph.D.\\
 Praha, 2017 & \\
 \end{tabular}
 }
+%\newpage
+%\includepdf[pages={1,2}]{parts/zadani.pdf}
 \newpage
 \vspace*{\fill}
 \section*{Prohlášení}
