--- a/text/parts/zaver.tex
+++ b/text/parts/zaver.tex
@@ -1,4 +1,9 @@
 \chapter*{Závěr}
 \markright{}
 \addcontentsline{toc}{chapter}{Závěr}
-skldfja
+V této práci byla probrána problematika kosmického záření v blízkém okolí Země a jeho monitorování. Bylo pojednáno o pasivních detektorech, které se využívají k jeho detekci. Stručně jsem zmínil jejich způsob fungování a podrobně jsem rozepsal metodiku vyhodnocování detektorů používaných Oddělením dozimetrie Ústavu jaderné fyziky AVČR. Ve stěžejní části byly popsány experimenty DOSIS a DOSIS3D. Jejich výsledky byly konfrontovány s daty jiných, podobných experimentů. Nakonec jsem vyhodnotil tři detektory stop TASTRAK, které byly umístěné od prosince 2015 do června 2016 v rámci experimentu DOSIS3D v modulu Columbus. Jejich vyhodnocování jsem důsledně popsal. Výsledkem je vypočítaná celková absorbovaná dávka a dávkový ekvivalent (resp. příslušné příkony) z každého detektoru. Pro každý detektor
+jsem dále vytvořil čtyři $\LET$ spektra -- pro počet detekovaných částic, pro diferenciální fluenci, pro dávku a pro dávkový ekvivalent. Dávkové příkony prvního, druhého a třetího detektoru jsou $D_1=(30\pm6)\ \mu$Gy/den, $D_2=(28\pm6)\ \mu$Gy/den a $D_3=(25\pm5)\ \mu$Gy/den. Dávkové příkony z termoluminiscenčních detektorů vycházejí o jeden řád vyšší. Tento rozdíl je dán necitlivostí vyhodnocených detektorů stop vůči částicím s $\LET<20$ keV/$\mu$m, necitlivostí TLD vůči částicím s vyšším $\LET$ a také tím, že vyhodnocené detektory stop byly leptány pouze jednou, tj. byly zobrazeny pouze některé stopy. Dávkové ekvivalenty se pro první dva detektory pohybují kolem $500\ \mu$Sv/den, pro třetí kolem $400\ \mu$Sv/den. $\LET$ spektra jsou k vidění v předchozí kapitole.
+
+V budoucnu lze detektory stop leptat podruhé, čímž se zobrazí další stopy. Vypočte se opět dávka, dávk. ekvivalent, a poté se přičtou k výsledkům prvního leptání. Kompletní výsledky z detektorů stop se dále zkombinují s výsledky z TLD, a tak se určí celková absorbovaná dávka a dávk. ekvivalent. 
+
+Dosavadní výsledky experimentů DOSIS a DOSIS3D poukazují na nutnost dlouhodobého souvislého měření kosmického záření v blízkém okolí Země, mají-li být prozkoumány všechny vlivy na jeho tok daným místem a na velikost obdržených dávek v daném místě.
