--- a/text/main.tex
+++ b/text/main.tex
@@ -8,7 +8,8 @@
 %\includeonly{parts/detektory, parts/experimentDosis}
 %\includeonly{parts/detektory,parts/praktickaCast, parts/experimentDosis}
 %\includeonly{parts/detektory}
-\includeonly{parts/kosmickeZareni, parts/titlepage, parts/detektory, parts/experimentDosis, parts/praktickaCast}
+%\includeonly{parts/kosmickeZareni, parts/titlepage, parts/detektory, parts/experimentDosis, parts/praktickaCast}
+%\includeonly{parts/zaver}%, parts/titlepage, parts/kosmickeZareni}
 \begin{document}
 \pagestyle{empty}
 
